--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Brioche/vendor/GLFW"]
 	path = Brioche/vendor/GLFW
 	url = https://github.com/TheCherno/glfw
+[submodule "Brioche/vendor/imgui"]
+	path = Brioche/vendor/imgui
+	url = https://github.com/TheCherno/imgui
