--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=472,34
-Size=550,646
+Pos=258,60
+Size=194,287
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Log]
 Pos=60,60
@@ -17,4 +18,21 @@ Collapsed=0
 Pos=89,68
 Size=350,560
 Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=196,287
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=172,195 Size=392,287 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=364,348 SelectedTab=0x46B5E99C
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=362,348 SelectedTab=0x080FC883
+DockSpace   ID=0xFA06BC56 Pos=112,154 Size=1280,701 CentralNode=1
 
