--- a/Brioche/Brioche.vcxproj.filters
+++ b/Brioche/Brioche.vcxproj.filters
@@ -16,9 +16,6 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Platform\OpenGL">
-      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -92,9 +89,6 @@
     </ClInclude>
     <ClInclude Include="src\Brioche\Window.h">
       <Filter>src\Brioche</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1202,6 +1196,9 @@
     <ClCompile Include="src\Brioche\Application.cpp">
       <Filter>src\Brioche</Filter>
     </ClCompile>
+    <ClCompile Include="src\Brioche\ImGui\ImGuiBuild.cpp">
+      <Filter>src\Brioche\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Brioche\ImGui\ImGuiLayer.cpp">
       <Filter>src\Brioche\ImGui</Filter>
     </ClCompile>
@@ -1213,9 +1210,6 @@
     </ClCompile>
     <ClCompile Include="src\Brioche\Log.cpp">
       <Filter>src\Brioche</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
