--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=258,60
-Size=194,287
+Pos=0,19
+Size=381,775
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Example: Log]
 Pos=60,60
@@ -20,19 +20,28 @@ Size=350,560
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=196,287
+Pos=1086,796
+Size=834,221
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
+[Window][Example: Property editor]
+Pos=0,796
+Size=1084,221
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=172,195 Size=392,287 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=364,348 SelectedTab=0x46B5E99C
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=362,348 SelectedTab=0x080FC883
-DockSpace   ID=0xFA06BC56 Pos=112,154 Size=1280,701 CentralNode=1
+DockSpace     ID=0xFA06BC56 Pos=0,42 Size=1920,998 Split=Y
+  DockNode    ID=0x00000003 Parent=0xFA06BC56 SizeRef=1920,775 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=381,998 SelectedTab=0x080FC883
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1537,998 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0xFA06BC56 SizeRef=1920,221 Split=X SelectedTab=0x593C5C9B
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1084,450 SelectedTab=0x593C5C9B
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=834,450 SelectedTab=0x46B5E99C
 
