Starting rendering OpenGL

--- a/Brioche/Brioche.vcxproj
+++ b/Brioche/Brioche.vcxproj
@@ -155,7 +155,9 @@
     <ClInclude Include="src\Brioche\LayerStack.h" />
     <ClInclude Include="src\Brioche\Log.h" />
     <ClInclude Include="src\Brioche\MouseButtonCodes.h" />
+    <ClInclude Include="src\Brioche\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Brioche\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\brpch.h" />
@@ -531,6 +533,7 @@
     <ClCompile Include="src\Brioche\Layer.cpp" />
     <ClCompile Include="src\Brioche\LayerStack.cpp" />
     <ClCompile Include="src\Brioche\Log.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\brpch.cpp">
