--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=0,19
-Size=381,775
+ViewportPos=1337,184
+ViewportId=0x080FC883
+Size=406,524
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Example: Log]
 Pos=60,60
@@ -26,7 +26,6 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1920,1017
 Collapsed=0
 
@@ -36,11 +35,14 @@ Size=1084,221
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Test]
+Pos=60,60
+Size=212,143
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0xFA06BC56 Pos=0,42 Size=1920,998 Split=Y
-  DockNode    ID=0x00000003 Parent=0xFA06BC56 SizeRef=1920,775 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=381,998 SelectedTab=0x080FC883
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1537,998 CentralNode=1
+  DockNode    ID=0x00000003 Parent=0xFA06BC56 SizeRef=1920,775 CentralNode=1
   DockNode    ID=0x00000004 Parent=0xFA06BC56 SizeRef=1920,221 Split=X SelectedTab=0x593C5C9B
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1084,450 SelectedTab=0x593C5C9B
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=834,450 SelectedTab=0x46B5E99C
