--- a/Brioche/Brioche.vcxproj
+++ b/Brioche/Brioche.vcxproj
@@ -155,8 +155,12 @@
     <ClInclude Include="src\Brioche\LayerStack.h" />
     <ClInclude Include="src\Brioche\Log.h" />
     <ClInclude Include="src\Brioche\MouseButtonCodes.h" />
+    <ClInclude Include="src\Brioche\Renderer\Buffer.h" />
     <ClInclude Include="src\Brioche\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Brioche\Renderer\Renderer.h" />
+    <ClInclude Include="src\Brioche\Renderer\Shader.h" />
     <ClInclude Include="src\Brioche\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -533,6 +537,10 @@
     <ClCompile Include="src\Brioche\Layer.cpp" />
     <ClCompile Include="src\Brioche\LayerStack.cpp" />
     <ClCompile Include="src\Brioche\Log.cpp" />
+    <ClCompile Include="src\Brioche\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Brioche\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Brioche\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
