--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=1337,184
-ViewportId=0x080FC883
-Size=406,524
+Pos=39,51
+Size=353,283
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Log]
 Pos=60,60
@@ -26,7 +26,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Size=1920,1017
+Size=1275,751
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -36,12 +36,16 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Test]
-Pos=60,60
-Size=212,143
+Pos=39,336
+Size=353,57
 Collapsed=0
+DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace     ID=0xFA06BC56 Pos=0,42 Size=1920,998 Split=Y
+DockNode      ID=0x00000001 Pos=229,264 Size=353,342 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=259,283 SelectedTab=0x080FC883
+  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=259,57 HiddenTabBar=1 SelectedTab=0x784DD132
+DockSpace     ID=0xFA06BC56 Pos=34,76 Size=1275,732 Split=Y
   DockNode    ID=0x00000003 Parent=0xFA06BC56 SizeRef=1920,775 CentralNode=1
   DockNode    ID=0x00000004 Parent=0xFA06BC56 SizeRef=1920,221 Split=X SelectedTab=0x593C5C9B
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1084,450 SelectedTab=0x593C5C9B
