--- a/Brioche/Brioche.vcxproj.filters
+++ b/Brioche/Brioche.vcxproj.filters
@@ -13,8 +13,14 @@
     <Filter Include="src\Brioche\ImGui">
       <UniqueIdentifier>{02B44C73-6ECA-4A09-B741-D62A23971B91}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Brioche\Renderer">
+      <UniqueIdentifier>{7E33C5E2-6AC2-4EAC-13E1-62A7FF4E5F52}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -87,8 +93,29 @@
     <ClInclude Include="src\Brioche\MouseButtonCodes.h">
       <Filter>src\Brioche</Filter>
     </ClInclude>
+    <ClInclude Include="src\Brioche\Renderer\Buffer.h">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Brioche\Renderer\GraphicsContext.h">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Brioche\Renderer\Renderer.h">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Brioche\Renderer\Shader.h">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Brioche\Window.h">
       <Filter>src\Brioche</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1191,12 +1218,6 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Brioche\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Brioche\Renderer\Shader.h" />
-    <ClInclude Include="src\Brioche\Renderer\Buffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Brioche\Renderer\Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Brioche\Application.cpp">
@@ -1217,6 +1238,24 @@
     <ClCompile Include="src\Brioche\Log.cpp">
       <Filter>src\Brioche</Filter>
     </ClCompile>
+    <ClCompile Include="src\Brioche\Renderer\Buffer.cpp">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Brioche\Renderer\Renderer.cpp">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Brioche\Renderer\Shader.cpp">
+      <Filter>src\Brioche\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1226,10 +1265,5 @@
     <ClCompile Include="src\brpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Brioche\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Brioche\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Brioche\Renderer\Renderer.cpp" />
   </ItemGroup>
 </Project>
