--- a/Brioche/Brioche.vcxproj.filters
+++ b/Brioche/Brioche.vcxproj.filters
@@ -1218,6 +1218,8 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
+    <ClInclude Include="src\Brioche\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Brioche\Application.cpp">
@@ -1265,5 +1267,7 @@
     <ClCompile Include="src\brpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Brioche\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
   </ItemGroup>
 </Project>
